crates/rattler_conda_types/src/package/snapshots/rattler_conda_types__package__paths__test__deserialize_paths_json_with_offsets.snap
---
source: crates/rattler_conda_types/src/package/paths.rs
expression: paths_json
---
paths:
  - _path: bin/example
    path_type: hardlink
    file_mode: binary
    prefix_placeholder: /opt/conda
    offsets:
      - encoding: utf-16-le
        ranges:
          - - 900
            - 1000
      - encoding: utf-8
        ranges:
          - - 100
            - 500
          - - 200
            - 300
            - 800
    sha256: e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855
    size_in_bytes: 1024
  - _path: bin/symlink-example
    path_type: softlink
  - _path: lib/library.so
    path_type: hardlink
    sha256: d7a8fbb307d7809469ca9abcb0082e4f8d5651e46d3cdb762d02d0bf37c9e592
    size_in_bytes: 2048
  - _path: share/doc/readme.txt
    path_type: hardlink
    file_mode: text
    prefix_placeholder: /home/builder/conda
    offsets:
      - encoding: utf-8
        ranges:
          - 10
          - 45
    sha256: a665a45920422f9d417e4867efdc4fb8a04a1f3fff1fa07e998e86f7f7a27ae3
    size_in_bytes: 256
paths_version: 1
